# git-ci-gym

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  build_backend.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_mock_run.py
git_ci_gym/: .env.example  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_mock_run.py
git_ci_gym/server/: __init__.py  app.py  git_ci_environment.py  requirements.txt  tasks.py
server/: ai_repair.py  app.py  git_ci_environment.py  github_intel.py
server/static/: index.html  stitch_base.html
tests/: test_app.py  test_environment.py
